--- a/e-commerce/.eslintrc.json
+++ b/e-commerce/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript", "prettier"],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-unused-vars": "warn"    
   }
 }
